--- a/_posts/2018-12-17-p2p-study.md
+++ b/_posts/2018-12-17-p2p-study.md
@@ -4,12 +4,20 @@ title: P2P conept study
 category: note
 tags: [web, network]
 ---
+### Concept
 P2P is call peer-to-peer networking. It is kind of distributed application architecture.
 
 Peers are equally privileged, equipotent participents in the application. Each peer is a node.
+
+![peer-to-peer (P2P) network](/public/image/2018-12-18/1024px-P2P-network.svg.png)
 
 One example is the BitTorrent, there is a server as a tracker. It keeps all peers in one routing table. Each node will assign upon joing the network and assign a GUID. Then all peer that he contact will update the information and share to other peers.
 
 Upon leaving the network, the node will contact other peer that he is going to leave. Peers are going to remove him from the routing table.
 
-detail resources from: http://tutorials.jenkov.com/p2p/index.html
+detail resources from: [Peer-to-Peer (P2P) Networks](http://tutorials.jenkov.com/p2p/index.html)
+
+### Choord vs. Kademlia
+In Kademlia, rounting table goes both ways. Peer have to notify others before leaving.
+
+In Choord, they are not symmetric. They do not need to keep each other. when leaving, they have to send leave message to the one keeps them in routing table.
