add comment, add pages

--- a/_posts/2018-12-17-p2p-study.md
+++ b/_posts/2018-12-17-p2p-study.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 title: P2P conept study
-category: note
-tags: [web, network]
+category: Note
+tags: [Web, Network]
+comments: true
 ---
 ### Concept
 P2P is call peer-to-peer networking. It is kind of distributed application architecture.
