switch style, change post, new post, amazon

--- a/_posts/2018-12-17-p2p-study.md
+++ b/_posts/2018-12-17-p2p-study.md
@@ -10,7 +10,7 @@ P2P is called peer-to-peer networking. It is kind of distributed application arc
 
 Peers are equally privileged, equipotent participants in the application. Each peer is a node.
 
-![peer-to-peer (P2P) network](/public/image/2018-12-18/1024px-P2P-network.svg.png)
+![peer-to-peer (P2P) network](/public/image/2018-12-18/1024px-P2P-network.png)
 
 One example is the BitTorrent, there is a server as a tracker. It keeps all peers in one routing table. Each node will assign upon joining the network and assign a GUID. Then all peer that he contact will update the information and share to other peers.
 
