--- a/_posts/2020-05-05-react-redux-ts2345.md
+++ b/_posts/2020-05-05-react-redux-ts2345.md
@@ -51,3 +51,21 @@ export interface ILoginProps extends StateProps {
     loginUser: Function
 }
 ```
+
+After more search, I found this [answer](https://stackoverflow.com/questions/58939260/incompatible-props-void-not-assignable-to-thunkaction). The [document](https://react-redux.js.org/using-react-redux/static-typing#typing-the-connect-higher-order-component) also has more information. 
+This is another way to solve the problem.
+```ts
+export interface ILoginProps extends PropsConnected {}
+const mapStateToProps = ({ authentication }: IRootState) => ({
+    isAuthenticated: authentication.isAuthenticated
+});
+const mapDispatchToProps = { loginUser };
+
+const connector =  connect(
+    mapStateToProps,
+    mapDispatchToProps
+);
+type PropsConnected = ConnectedProps<typeof connector>;
+
+export default connector(Login);
+```
