fix tag, add rcf2047

--- a/_posts/2020-05-05-react-redux-ts2345.md
+++ b/_posts/2020-05-05-react-redux-ts2345.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: TS2345 error using react-redux connect
-category: Java
-tags: [Java, SpringBoot, Autowiring]
+category: JavaScript
+tags: [JavaScript, TypeScript, Redux, React]
 comments: true
 ---
 ## TL;DR
